# cpp_tagged_pointer

./: CMakeLists.txt  README.md  dispatch_call.h  example.cpp  tagged_pointer.h
examples/: CMakeLists.txt
include/: tagged_pointer.h
